# openapi-mcp-generator

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.secrets/: .encryption_key  c3RyaXBlLWFwaS1hcGlfa2V5.secret  c3RyaXBlLWFwaS1wdWJsaXNoYWJsZS1hcGlfa2V5.secret  secrets_metadata.json
runtime/: .env.example  .gitignore  REGISTRY_README.md  __init__.py  main.py  mcp_cli.py  mcp_stdio_server.py  pyproject.toml  requirements.txt  test_registry.py
runtime/.secrets/: .encryption_key  Z2l0aHViLWFwaS1hcGlfa2V5.secret  c2xhY2stYXBpLW9hdXRoMl9jbGllbnRfaWQ.secret  c2xhY2stYXBpLW9hdXRoMl9jbGllbnRfc2VjcmV0.secret  c2xhY2stYXBpLWFwaV9rZXk.secret  c2xhY2std2ViLWFwaS1hcGlfa2V5.secret  c3RyaXBlLWFwaV9rZXk.secret  secrets_metadata.json
runtime/api/: __init__.py  credentials.py  health.py  mcp.py  projects.py  runtime.py
runtime/cli/: __init__.py  main.py
runtime/cli/commands/: credentials_cmd.py  import_cmd.py  validate_cmd.py
runtime/core/: __init__.py  authenticated_client.py  azure_secrets.py  builtin_tools.py  config.py  credential_resolver.py  exceptions.py  local_secrets.py  logging.py  middleware.py  registry.py  registry_service.py  secret_factory.py  secrets.py
runtime/models/: __init__.py  manifest.py
runtime/samples/: README.md  swagger-petstore.yaml
runtime/scripts/: init_db.sql
runtime/tests/: test_api.py  test_builtin_tools.py  test_cli.py  test_credential_resolution.py  test_credentials_api.py  test_manifest.py  test_secrets.py
